--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/pfe?createDatabaseIfNotExist=t
 
 spring.mail.host = smtp.gmail.com
 spring.mail.username =amirmezrani1@gmail.com
-spring.mail.password =amir1234MEZ1234
+spring.mail.password =
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
